<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LiveWallpaper</string>
    <string name="author">Kang Sang Wook</string>
    <string name="description">LiveWallpaper</string>

    <string name="livewallpaper_settings">Settings</string>
    <string name="livewallpaper_settings_title">Select test pattern</string>
    <string name="livewallpaper_settings_summary">
        Choose which test pattern to display</string>
    <string name="livewallpaper_movement_title">Motion</string>
    <string name="livewallpaper_movement_summary">
        Apply movement to test pattern</string>
</resources>